# ecosystem

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yaml  vcpkg.json
backend/api/: main.cpp
backend/core/instruments/: instrument.h  instruments.h
backend/core/process_manager/: process_manager.cpp  process_manager.h
backend/plugins/: plugin.h
backend/plugins/market_data/: market_data.cpp  market_data.h
backend/plugins/market_data_manager/: market_data_manager.cpp  market_data_manager.h
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: menuBar.tsx
frontend/src/core/connection/: backend.ts  connection.tsx
frontend/src/core/info/: info.ts
frontend/src/core/instruments/: instrument.ts
frontend/src/core/menu_bar/: menu_bar.css  menu_bar.tsx
frontend/src/core/widget/: widget.css  widget.tsx
frontend/src/lib/: backend.ts  link.ts
frontend/src/lib/local_storage/: local_storage.ts
frontend/src/plugins/: widget.css  widget.tsx
frontend/src/plugins/connection/: connection.css  connection.tsx
frontend/src/plugins/market_data/: backend.ts  market_data.css  market_data.tsx
frontend/src/plugins/market_data_manager/: backend.ts  instrument_row.tsx  market_data_manager.css  market_data_manager.tsx
src/: test.cpp
